<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Attendance Tracker</string>
    <string name="geofence_enter">Now entering %1$s</string>
    <string name="geofence_dwell">Dwelling in %1$s</string>
    <string name="geofence_exit">Now exiting %1$s</string>
    <string name="events">Events</string>
    <string name="map">Map</string>
    <string name="transition">Transition</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">App registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">Too many PendingIntents provided</string>
    <string name="unknown_geofence_error">Unknown error</string>
    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="attendence_tracker">Attendance Tracker</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="login_text">LOGIN</string>
    <string name="allsmart_logo">All Smart Logo</string>
    <string name="powered_by">Powered by</string>
    <string name="oppo_logo">Oppo Logo</string>
    <string name="gps_yellow_icon">GPS yello icon</string>
    <string name="store">Stores</string>
    <string name="promoters">Promoters</string>
    <string name="leaves">Leaves</string>
    <string name="contact_support">Contact Support</string>
    <string name="log_off">Log Off</string>
    <string name="add_store_button">Add Store</string>
    <string name="edit_store">Edit Store</string>
    <string name="default_address">Ground floor, Dainik Bhaskar Mal, Hoshangabad Rd, Zone - 1, Maharana Pratap Nagar Bhopal</string>
    <string name="get_cuurent_location">" Get Current Location"</string>
    <string name="store_name">Store Name</string>
    <string name="store_address">Store Address</string>
    <string name="add_promoter_button">Add Promoter</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone #</string>
    <string name="email_address">Email Address</string>
    <string name="address">Address</string>
    <string name="se_assignment">SE Assignment</string>
    <string name="store_assignment">Store Assignment</string>
    <string name="weekly_off">Weekly Off</string>
    <string name="leave_status">Leave Status</string>
    <string name="leave_request">Leave Request</string>
    <string name="time_in">|   Time In</string>
    <string name="edit_promoter">Edit Promoter</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="promoter_details">Promoter Details</string>
    <string name="change_password">Change Password</string>
    <string name="my_account">My Account</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="current_password">Current Password</string>
    <string name="change">Change</string>
    <string name="submit">Submit</string>
    <string name="reason">Reason</string>
    <string name="site_radius">Site Radius</string>
    <string name="email">Email:</string>
    <string name="start">Start</string>
    <string name="off_site">Off Site</string>
    <string name="attendance">Attendance</string>
    <string name="history">History</string>
    <string name="more">More</string>
    <string name="end">End</string>
    <string name="day_s">Day(s)</string>
    <string name="type">Type</string>
    <string name="casual">Casual</string>
    <string name="store_list">Store List</string>
    <string name="confirm">Confirm</string>
    <string name="retake">Retake</string>
    <string name="description">Description</string>
    <string name="edit_leave">Edit Leave</string>
    <string name="lat">Lat:</string>
    <string name="lon">Lon:</string>
    <string name="reset">Reset</string>
    <string name="reporting_manager">Reporting Manager</string>
    <string name="leave_requisition">Leave Requisition</string>
    <string name="update">Update</string>
    <string name="end_date">End Date</string>
    <string name="select_type">Select Type</string>
    <string name="reject">Reject</string>
    <string name="approve">Approve</string>
    <string name="promoter_approvals">Promoter Approvals</string>
    <string name="start_date">Start Date</string>
    <string name="select_reason">Select Reason</string>
    <string name="contact_phone">Phone:</string>
    <string name="reportees">Reportees</string>
    <string name="configure_store">Configure Store</string>
    <string name="enable">Enable</string>
    <string name="time_in_out_message">Time In/Out done for today</string>

</resources>