<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@color/colorLoginButton"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:textColor="@color/colorWhite"
        android:weightSum="1">

        <ImageView
            android:contentDescription="@string/oppo_logo"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="3dp"
            android:background="@drawable/oppologowhite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorWhite"
            android:text="@string/attendence_tracker"
            android:textSize="27sp" />

        <EditText
            android:id="@+id/emailET"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_edittext"
            android:hint="@string/username_hint"
            android:drawableRight="@drawable/email"
            android:drawableEnd="@drawable/email"
            android:inputType="textEmailAddress"
            android:text="anand@securet.in"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/passwordET"
            android:background="@drawable/login_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:drawableEnd="@drawable/password"
            android:drawableRight="@drawable/password"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:text="test@1234"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvForgotPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="17sp"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password"
            android:layout_marginBottom="10dp"
            />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:textSize="27sp"
            android:background="@drawable/login_button"
            android:text="@string/login_text"
            android:textColor="@color/colorLoginButton" />



    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/tvPoweredBy"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:text="@string/powered_by"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <ImageView
            android:layout_below="@id/tvPoweredBy"
            android:contentDescription="@string/allsmart_logo"
            android:id="@+id/ivAllSmartLogo"
            android:src="@drawable/allsmartmainlogo"
            android:layout_width="130dp"
            android:layout_height="35dp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/appVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_horizontal"
            android:layout_margin="2dp"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>