<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:padding="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginStart="@dimen/margin_10"
        android:text="@string/change_password"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_23"
        android:layout_marginLeft="@dimen/margin_10" />
    <EditText
        android:layout_marginTop="@dimen/margin_10"
        android:id="@+id/etCurrentPassword"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginStart="@dimen/margin_20"
        android:textSize="@dimen/text_20"
        android:layout_marginRight="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_20"
        android:paddingTop="@dimen/margin_10"
        android:fontFamily=""
        android:inputType="textPassword"
        android:paddingStart="@dimen/margin_5"
        android:paddingBottom="@dimen/margin_10"
        android:background="@drawable/edittext_editstore_item"
        android:hint="@string/current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_5" />

    <EditText
        android:layout_marginTop="@dimen/margin_10"
        android:id="@+id/etNewPassword"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginStart="@dimen/margin_20"
        android:textSize="@dimen/text_20"
        android:layout_marginRight="@dimen/margin_20"
        android:inputType="textPassword"
        android:layout_marginEnd="@dimen/margin_20"
        android:fontFamily=""
        android:paddingTop="@dimen/margin_10"
        android:paddingStart="@dimen/margin_5"
        android:paddingBottom="@dimen/margin_10"
        android:background="@drawable/edittext_editstore_item"
        android:hint="@string/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_5" />
    <EditText
        android:layout_marginTop="@dimen/margin_10"
        android:id="@+id/etConfirmPassword"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginStart="@dimen/margin_20"
        android:fontFamily=""
        android:textSize="@dimen/text_20"
        android:layout_marginRight="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_20"
        android:inputType="textPassword"
        android:paddingTop="@dimen/margin_10"
        android:paddingStart="@dimen/margin_5"
        android:paddingBottom="@dimen/margin_10"
        android:background="@drawable/edittext_editstore_item"
        android:hint="@string/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_5" />
    <Button
        android:id="@+id/btChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginStart="@dimen/margin_20"
        android:textSize="@dimen/text_20"
        android:text="@string/change"

        android:textColor="@color/colorWhite"
        android:background="@drawable/editstore_edit_button"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_20"/>

</LinearLayout>