<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="@android:color/black"
                android:text="@string/add_promoter_button"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"
                android:hint="@string/first_name"
                android:textStyle="italic"
                android:padding="5dp"
                android:textSize="18sp"
                android:background="@drawable/edittext_editstore_item"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:gravity="top"
                android:textStyle="italic"
                android:layout_marginRight="20dp"
                android:padding="5dp"
                android:hint="@string/last_name"
                android:textSize="18sp"
                android:background="@drawable/edittext_editstore_item"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:gravity="top"
                android:textStyle="italic"
                android:layout_marginRight="20dp"
                android:padding="5dp"
                android:hint="@string/phone"
                android:textSize="18sp"
                android:background="@drawable/edittext_editstore_item"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:gravity="top"
                android:textStyle="italic"
                android:layout_marginRight="20dp"
                android:padding="5dp"
                android:hint="@string/email_address"
                android:textSize="18sp"
                android:background="@drawable/edittext_editstore_item"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginEnd="20dp"
                android:gravity="top"
                android:textStyle="italic"
                android:layout_marginRight="20dp"
                android:padding="5dp"
                android:hint="@string/address"
                android:textSize="18sp"
                android:background="@drawable/edittext_editstore_item"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="15dp" />
            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:text="Add"
                    android:textAllCaps="false"
                    android:background="@drawable/editstore_edit_button"
                    android:textSize="22sp"
                    android:textColor="@color/colorWhite"
                    android:layout_width="110dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_height="wrap_content" />
                <Button
                    android:text="Cancel"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:textAllCaps="false"
                    android:background="@drawable/editstore_cancel_button"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <include layout="@layout/fragment_add_promoter_arrow"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>