<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@android:color/black"
        android:text="@string/add_store_button"/>
    <EditText
        android:id="@+id/etStoreName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:hint="@string/store_name"
        android:textStyle="italic"
        android:padding="10dp"
        android:textSize="18sp"
        android:background="@drawable/edittext_editstore_item"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        />
    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginEnd="20dp"
        android:gravity="top"
        android:textStyle="italic"
        android:layout_marginRight="20dp"
        android:padding="5dp"
        android:hint="@string/store_address"
        android:textSize="18sp"
        android:background="@drawable/edittext_editstore_item"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="15dp"
        />
    <Button
        android:id="@+id/btGetLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:padding="10dp"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:background="@drawable/get_current_location_button"
        android:textColor="@color/colorWhite"
        android:text="@string/get_cuurent_location"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:drawableLeft="@android:drawable/ic_menu_compass"/>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="|"/>
        <TextView
            android:id="@+id/longitude"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btAdd"
            android:text="Add"
            android:textAllCaps="false"
            android:textSize="22sp"
            android:textColor="@color/colorWhite"
            android:layout_width="150dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btCancel"
            android:text="Cancel"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textAllCaps="false"
            android:background="@drawable/editstore_cancel_button"
            android:textColor="@color/colorWhite"
            android:textSize="22sp"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>