<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="@dimen/margin_5"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_22"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_marginBottom="@dimen/margin_10"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginLeft="@dimen/margin_20"
                android:textColor="@android:color/black"
                android:text="@string/configure_store"/>
            <EditText
                android:id="@+id/etStoreId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                android:gravity="center_vertical"
                android:hint="Store Id"
                android:textStyle="italic"
                android:padding="@dimen/margin_10"
                android:textSize="@dimen/text_18"
                android:background="@drawable/edittext_editstore_item"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginBottom="@dimen/margin_10"/>
            <EditText
                android:id="@+id/etStoreRadius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                android:gravity="center_vertical"
                android:hint="@string/site_radius"
                android:visibility="gone"
                android:inputType="number"
                android:textStyle="italic"
                android:padding="@dimen/margin_10"
                android:textSize="@dimen/text_18"
                android:background="@drawable/edittext_editstore_item"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginBottom="@dimen/margin_10"/>
            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_100"
                android:layout_marginEnd="@dimen/margin_20"
                android:gravity="top"
                android:enabled="false"
                android:textStyle="italic"
                android:layout_marginRight="@dimen/margin_20"
                android:padding="@dimen/margin_10"
                android:hint="@string/store_address"
                android:textSize="@dimen/text_18"
                android:background="@drawable/edittext_editstore_item"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginBottom="@dimen/margin_15"
                />
            <Button
                android:id="@+id/btGetLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_5"
                android:paddingStart="@dimen/margin_5"
                android:paddingRight="@dimen/margin_5"
                android:textSize="@dimen/text_18"
                android:textAllCaps="false"

                android:background="@drawable/get_current_location_button"
                android:textColor="@color/colorWhite"
                android:text="Get Store Details"
                android:layout_gravity="center_horizontal" />

            <!--<ImageView
                android:id="@+id/ivPhoto"
                android:src="@drawable/"
                android:padding="@dimen/margin_10"
                android:layout_margin="@dimen/margin_20"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/image_background"
                android:layout_width="@dimen/margin_70"
                android:layout_height="@dimen/margin_70" />-->

        </LinearLayout>
    </ScrollView>

</LinearLayout>